[metadata]
name = blacksmithing
version = 1.0.0
author = R. Douglas G. de Aquino
author_email = aquinordga@gmail.com
description = ⚒️ A metalworking-inspired framework for semantic clustering and evaluation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aquinordg/blacksmithing
download_url = https://github.com/aquinordg/blacksmithing/archive/refs/tags/v1.0.0.tar.gz
project_urls =
    Homepage = https://github.com/aquinordg/blacksmithing
    Documentation = https://aquinordg.github.io/blacksmithing
    Bug Tracker = https://github.com/aquinordg/blacksmithing/issues
    Source Code = https://github.com/aquinordg/blacksmithing
    Changelog = https://github.com/aquinordg/blacksmithing/blob/main/CHANGELOG.md
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development :: Libraries :: Python Modules
    Natural Language :: English
keywords =
    clustering
    semantic analysis
    machine learning
    categorical data
    binary data
    pattern recognition

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.12
install_requires =
    pandas >=1.5.0
    numpy >=1.23.0
    scikit-learn >=1.2.0
    matplotlib >=3.6.0; python_version >= "3.12"
include_package_data = True
zip_safe = False

[options.packages.find]
where = src
exclude =
    tests*
    examples*
    docs*

[options.extras_require]
test =
    pytest >=7.0.0
    pytest-cov >=4.0.0
dev =
    black
    flake8
    pre-commit
    twine
    sphinx
    sphinx-rtd-theme

[egg_info]
tag_build =
tag_date = 0